--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^16.9.53",
+    "css-loader": "^5.0.0",
     "lerna": "^3.22.1",
+    "mini-css-extract-plugin": "^1.2.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.4",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "webpack-dev-server": "^3.11.0"
   },
   "browserslist": [
     "last 2 versions",
@@ -23,6 +29,10 @@
     "packages/*"
   ],
   "dependencies": {
+    "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
+    "react-icons": "^3.11.0",
+    "react-slider": "^1.0.11",
     "redux-thunk": "^2.3.0"
   }
 }
