--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "@home/lights",
+  "name": "@home/logger",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@home/commons": "*",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "redux": "^4.0.5",
     "react-redux": "^7.2.1",
-    "url-polyfill": "^1.1.11"
+    "react-json-view": "^1.19.1"
   },
   "devDependencies": {
-    "@babel/core": "7.12.3",
-    "@babel/preset-react": "7.12.1",
     "babel-loader": "8.1.0",
     "html-webpack-plugin": "4.5.0",
     "serve": "11.3.2",
     "webpack": "5.1.3",
-    "webpack-cli": "4.0.0"
+    "webpack-cli": "4.0.0",
+    "@babel/core": "7.12.3",
+    "@babel/preset-react": "7.12.1"
   },
   "scripts": {
     "start": "webpack serve",
     "build": "webpack --mode production",
-    "serve": "serve dist -p 3002",
+    "serve": "serve dist -p 3003",
     "clean": "rm -rf dist"
   }
 }
