--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -9,6 +9,7 @@
       "mqtt": "^4.2.1",
       "redux": "^4.0.5",
       "react-redux": "^7.2.1",
+      "react-router-dom": "^5.2.0",
       "url": "^0.11.0",
       "process": "^0.11.10",
       "buffer": "^5.6.0",
@@ -24,7 +25,7 @@
       "@babel/preset-react": "7.12.1"
     },
     "scripts": {
-      "start": "webpack --watch",
+      "start": "webpack serve",
       "build": "webpack --mode production",
       "serve": "serve dist -p 3001",
       "clean": "rm -rf dist"
