--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
+    "dayjs": "^1.9.4",
     "react-icons": "^3.11.0",
     "react-slider": "^1.0.11",
     "redux-thunk": "^2.3.0"
