--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "dayjs": "^1.9.4",
+    "react-color": "^2.19.3",
     "react-icons": "^3.11.0",
     "react-slider": "^1.0.11",
+    "recharts": "^1.8.5",
     "redux-thunk": "^2.3.0"
   }
 }
