--- a/packages/app-header/package.json
+++ b/packages/app-header/package.json
@@ -20,7 +20,7 @@
     "webpack-cli": "4.0.0"
   },
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --host 0.0.0.0",
     "build": "webpack --mode production",
     "serve": "serve dist -p 3004",
     "clean": "rm -rf dist"
