--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -25,7 +25,7 @@
       "@babel/preset-react": "7.12.1"
     },
     "scripts": {
-      "start": "webpack serve",
+      "start": "webpack serve --host 0.0.0.0",
       "build": "webpack --mode production",
       "serve": "serve dist -p 3001",
       "clean": "rm -rf dist"
